[package]
name = "buddytalk_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
livekit = "0.7.8"                              # Ensure this is the latest version
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3.31"
log = "0.4.27"
